make sure the EmbeddedWidget's box shrinkwraps the iframe

--- a/src/main/js/content/components/widgets/EmbededWidget.scss
+++ b/src/main/js/content/components/widgets/EmbededWidget.scss
@@ -2,6 +2,7 @@
 	margin: 1rem 0 1.5rem;
 	padding: 0;
 	position: relative;
+	overflow: hidden;
 	min-height: 100px;
 	border: 1px solid #e2e2e2;
 	box-shadow: 0 0 4px 0 rgba(0,0,0,0.17);
